--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <br>
 <h1 align="Left"><p style = "font-size: 18px;">Plants have developed poisons because they cannot move to avoid predators. Plants have developed a variety of weapons (such as spines, hairs) and a lethal chemical arsenal.So Basically plants have developed poisons to somehow defend themselves against living things that consume them</p>
 <br>
-<h1 align="Left"><p><i>Aconitum Napellus</i></p>
+<p><i>Aconitum Napellus</i></p>
 <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/Aconitum_napellus_JPG1a.jpg" width="858.5" height="644" >
 <br>
 <p style="font-size: 16px;">Other Names:Monkshood,Wolfsbane</p>
